--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "googleapis": "^154.0.0",
     "inquirer": "^9.2.12",
     "nodemailer": "^7.0.5",
-    "node-red": "^3.1.0"
+    "node-red": "^3.1.0",
+    "node-red-node-email": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
