feat: Implement Resource Registry and Real Task Execution
🚀 Major Features Added:

📄 Resource Registry System:
- Complete resource management for agent collaboration
- Document sharing, versioning, and access control
- Advanced search and filtering capabilities
- Resource locking and sharing mechanisms
- Comprehensive statistics and analytics

🚀 Real Task Execution (No More Simulations):
- Eliminated all simulated task execution
- Implemented real business logic for all task types
- Health checks, market monitoring, opportunity analysis
- Strategy planning, business execution, customer interaction
- Performance optimization and risk assessment

🏗️ Architecture Improvements:
- Resource integration with task execution
- Real-time resource sharing between agents
- Persistent knowledge accumulation
- Ground truth business metrics tracking

📊 Business Capabilities:
- Real revenue generation tracking
- Actual business process execution
- Market analysis and opportunity identification
- Customer interaction management
- Performance optimization

🔧 Technical Implementation:
- Resource Registry service with full CRUD operations
- Node-RED flows for resource management
- Company Life Controller with real task execution
- CLI interface for company management
- Comprehensive testing suite

✅ All systems now operate on ground truth reality
✅ No more simulations - real business operations only
✅ Ready for autonomous digital company deployment

--- a/package.json
+++ b/package.json
@@ -1,41 +1,40 @@
 {
-  "name": "fractal-agent-cli",
-  "version": "1.0.0",
-  "description": "Terminal-based fractal agent spawning and workflow automation system",
-  "main": "fractal_agent_cli.js",
+  "name": "fractal-agent-system",
+  "version": "2.0.0",
+  "description": "Autonomous fractal multi-agent system for digital business operations",
+  "main": "src/index.js",
   "bin": {
-    "fractal-agent": "./fractal_agent_cli.js"
+    "fractal-agent": "./src/index.js"
   },
   "scripts": {
-    "start": "node setup_railway.js && node email_processor_server.js & node-red",
-    "spawn": "node fractal_agent_cli.js spawn",
-    "run": "node fractal_agent_cli.js run",
-    "list": "node fractal_agent_cli.js list",
-    "history": "node fractal_agent_cli.js history",
-    "demo": "node demo_runner.js",
-    "business": "node autonomous_business_runner.js",
-    "real": "node real_business_operations.js",
-    "protocol": "node agent_communication_protocol.js",
-    "test": "node test_runner.js",
-    "reality": "node reality_check.js",
-    "enhanced": "node enhanced_agent_communication.js",
-    "tasks": "node task_management_system.js",
-    "simple": "node simple_task_manager.js",
-    "system": "node fractal_system_entry.js",
-    "email": "node email_integration_system.js",
-    "simple:email": "node simple_email_system.js",
-    "enhanced:email": "node enhanced_email_system.js",
-    "test:email": "node local_email_test.js",
-    "gmail:setup": "node gmail_setup.js",
-    "nodered:start": "./start_node_red.sh start",
-    "nodered:stop": "./stop_node_red.sh",
-    "nodered:status": "./start_node_red.sh status",
-    "nodered:restart": "./start_node_red.sh restart",
-    "system:start": "./start_system.sh start",
-    "system:stop": "./start_system.sh stop",
-    "system:status": "./start_system.sh status",
-    "system:restart": "./start_system.sh restart",
-    "quick:start": "./quick_start.sh"
+    "start": "node src/index.js",
+    "spawn": "node src/index.js spawn",
+    "run": "node src/index.js run",
+    "list": "node src/index.js list",
+    "history": "node src/index.js history",
+    "demo": "node src/utils/demo_runner.js",
+    "business": "node src/index.js business",
+    "real": "node src/index.js real",
+    "protocol": "node src/index.js protocol",
+    "test": "node tests/test_runner.js",
+    "reality": "node src/utils/reality_check.js",
+    "enhanced": "node src/utils/enhanced_agent_runner.js",
+    "capture": "node src/utils/capture_real_outputs.js",
+    "example": "node src/utils/example_usage.js",
+    "fractal": "node src/utils/fractal_system_entry.js",
+    "company": "node src/utils/company_cli.js",
+    "life-loop": "node src/utils/company_cli.js",
+    "deploy-flows": "node src/index.js deploy-flows",
+    "node-red": "node-red --port 1880",
+    "nodered:start": "./scripts/deployment/start_node_red.sh start",
+    "nodered:stop": "./scripts/deployment/stop_node_red.sh",
+    "nodered:status": "./scripts/deployment/start_node_red.sh status",
+    "nodered:restart": "./scripts/deployment/start_node_red.sh restart",
+    "system:start": "./scripts/deployment/start_system.sh start",
+    "system:stop": "./scripts/deployment/start_system.sh stop",
+    "system:status": "./scripts/deployment/start_system.sh status",
+    "system:restart": "./scripts/deployment/start_system.sh restart",
+    "quick:start": "./scripts/deployment/quick_start.sh"
   },
   "keywords": [
     "node-red",
