--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "author": "Fractal Agent System",
   "license": "MIT",
   "dependencies": {
+    "ajv": "^8.12.0",
     "axios": "^1.6.0",
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
@@ -55,7 +56,8 @@
     "inquirer": "^9.2.12",
     "nodemailer": "^7.0.5",
     "node-red": "^3.1.0",
-    "node-red-node-email": "^3.0.3"
+    "node-red-node-email": "^3.0.3",
+    "openai": "^4.20.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
