--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "company": "node src/utils/company_cli.js",
     "life-loop": "node src/utils/company_cli.js",
     "deploy-flows": "node src/index.js deploy-flows",
+    "test:tools": "node src/utils/test_tool_registry.js",
+    "test:agents": "node src/utils/test_agent_system.js",
+    "test:integrated": "node src/utils/test_integrated_system.js",
     "node-red": "node-red --port 1880",
     "nodered:start": "./scripts/deployment/start_node_red.sh start",
     "nodered:stop": "./scripts/deployment/stop_node_red.sh",
