--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,7 @@ data/email/*.json
 data/business/*.json
 data/communications/*.json
 data/system/*.json
+email_data/*
 
 # Node-RED data
 .flows.json.backup
@@ -199,3 +200,5 @@ Thumbs.db
 *.bak
 *.backup
 *.old
+.aider*
+.specstory/*
