troubleshooted node red tool registry and api key issues

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "test:integrated": "node src/utils/test_integrated_system.js",
     "test:openai": "node src/utils/test_openai_integration.js",
     "test:web-search": "node src/utils/test_web_search.js",
+    "test:tools:registry": "node src/utils/test_tool_registry.js",
+    "test:tasks": "node src/utils/test_task_manager.js",
     "node-red": "node-red --port 1880",
     "nodered:start": "./scripts/deployment/start_node_red.sh start",
     "nodered:stop": "./scripts/deployment/stop_node_red.sh",
